--- a/yuke-rpc-core/pom.xml
+++ b/yuke-rpc-core/pom.xml
@@ -12,6 +12,11 @@
     <artifactId>yuke-rpc-core</artifactId>
     <dependencies>
         <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.3.0</version>
+        </dependency>
+        <dependency>
             <groupId>io.vertx</groupId>
             <artifactId>vertx-core</artifactId>
             <version>4.5.1</version>
