--- a/example-springboot/pom.xml
+++ b/example-springboot/pom.xml
@@ -2,20 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>yuke-rpc</artifactId>
+        <groupId>com.yuke</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.yuke</groupId>
-    <artifactId>yuke-rpc</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>example-consumer</module>
-        <module>example-common</module>
-        <module>example-provider</module>
-<!--        <module>yuke-rpc-easy</module>-->
-        <module>yuke-rpc-core</module>
-        <module>example-springboot</module>
-    </modules>
+    <artifactId>example-springboot</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
